--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "axios": "^0.21.1",
+    "body-parser": "^1.20.0",
+    "express": "^4.18.1",
     "pg": "^8.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
